add football to homepage

--- a/index.html
+++ b/index.html
@@ -55,7 +55,16 @@
 				<h2>Personal Projects</h2>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>Olympics 2016</h3></div>
+				<div class="projectTitle"><h3>Data Vis: UFWC</h3></div>
+				<div class="projectDesc">
+					<a href="/football/" target="football"><img src="images/football.png" /></a>
+					<p>The <a href="http://www.ufwc.co.uk/" target="ufwc">Unofficial Football World Championships</a> is a project by Paul Brown that tracks the World Champions of football as if the title were decided in the same way as boxing, i.e a team remains champions until they lose a game.</p>
+					<p>My <a href="/football/" target="football">data visualisation</a> shows all of the 918 "title decider" games that have been played so far showing how thetitle has jumped from nation to nation and continent to continent.</p>
+					<p>The visualisation was built using D3.js and JQuery and all the data was sourced from the <a href="http://www.ufwc.co.uk/results/" target="ufwc">UFWC website</a>.</p>
+				</div>
+			</div>
+			<div class="project">
+				<div class="projectTitle"><h3>Data vis: Olympics 2016</h3></div>
 				<div class="projectDesc">
 					<a href="/olympics/" target="olympics"><img src="images/olympics.png" /></a>
 					<p>A selection of data visualisations from the <a href="/olympics/" target="olympics">2016 Summer Olympics</a>.</p>
@@ -64,7 +73,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>The Cocktail Menu</h3></div>
+				<div class="projectTitle"><h3>Data Vis: Cocktail Menu</h3></div>
 				<div class="projectDesc">
 					<a href="/cocktails/" target="cocktails"><img src="images/cocktails.png" /></a>
 					<p>An exercise in using D3.js and SVG to create <a href="/cocktails/" target="cocktails">data visualisations of cocktails</a> and their ingredients.</p>
@@ -74,7 +83,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>Valar Morghulis</h3></div>
+				<div class="projectTitle"><h3>Data Vis: Valar Morghulis</h3></div>
 				<div class="projectDesc">
 					<a href="/got/" target="got"><img src="images/got-deaths.png" /></a>
 					<p>Fans of Game of Thrones know that Valar Morghulis (all men must die) but when over 200 named characters have already gone to meet The Seven (or The Old Gods, or The Drowned God, or The Lord of Light, or The Many-Faced God of Death, or the Great Stallion, etc...) then it gets hard to keep track of the tragedy.</p>
@@ -84,7 +93,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>MP CoMParison</h3></div>
+				<div class="projectTitle"><h3>Web: MP CoMParison</h3></div>
 				<div class="projectDesc">
 					<a href="/politics/mpcompare/" target="mp-compare"><img src="images/mp-compare.png" /></a>
 					<p>The site <a href="http://www.publicwhip.org.uk/" target="_whip">the Public Whip</a> aggregates the data on how MPs in the UK parliament vote. They then group this by similar votes to provide an insight into how much each MP supports a particular policy.</p>
@@ -95,7 +104,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>Social Feed</h3></div>
+				<div class="projectTitle"><h3>Web: Social Feed</h3></div>
 				<div class="projectDesc">
 					<a href="https://medium.com/@andybarefoot/adding-instagram-photos-to-my-site-with-angularjs-a3eb2a436746#.m70yzvvdb" target="medium-instagram"><img src="images/medium-instagram.png" /></a>
 					<p>I updated the implementation of the social feed on this site to use AngularJS.</p>
@@ -104,7 +113,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>Ski VR</h3></div>
+				<div class="projectTitle"><h3>Mobile Gaming: Ski VR</h3></div>
 				<div class="projectDesc">
 					<a href="https://play.google.com/store/apps/details?id=com.GunterGames.SkiVR" target="skivr"><img src="images/ski-vr.png" /></a>
 					<p>Ski VR is a quick VR demo built for Google Cardboard but also playable without a headset.</p>
@@ -114,7 +123,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>Color Hex</h3></div>
+				<div class="projectTitle"><h3>Mobile Gaming: Color Hex</h3></div>
 				<div class="projectDesc">
 					<a href="http://www.guntergames.com/colorhex" target="colorhex"><img src="images/color-hex.jpg" /></a>
 					<p>Color Hex is a mobile puzzle game for Android and iOS built and published uing the Unity platform.</p>
@@ -126,7 +135,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>Super Dice</h3></div>
+				<div class="projectTitle"><h3>Mobile Gaming: Super Dice</h3></div>
 				<div class="projectDesc">
 					<a href="http://www.guntergames.com/superdice" target="sneakers"><img src="images/super-dice.jpg" /></a>
 					<p>My first attempt at using the <a href="https://unity3d.com/" target="_unity">Unity</a> platform to create a mobile game was a mobile version of the dice game Farkle.</p>
@@ -134,7 +143,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>All The Sneakers</h3></div>
+				<div class="projectTitle"><h3>Web: All The Sneakers</h3></div>
 				<div class="projectDesc">
 					<a href="http://www.allthesneakers.com/" target="sneakers"><img src="images/all-the-sneakers.jpg" /></a>
 					<p>In-progress search engine of sneakers collating and comparing sneakers from a number of eCommerce sites.</p>
@@ -144,7 +153,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>Winstagram</h3></div>
+				<div class="projectTitle"><h3>Web: Winstagram</h3></div>
 				<div class="projectDesc">
 					<a href="winstagram" target="winstagram" ><img src="images/winstagram.jpg" /></a>
 					<p>More and more people are posting photos on their social web blogs. But most of them are not very good photographers. Or have poorly made cameras. The colours come out funny, the edges are all crackly and often some of the image is out of focus.</p>
@@ -152,7 +161,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>We can't go on like this</h3></div>
+				<div class="projectTitle"><h3>Web: We can't go on like this</h3></div>
 				<div class="projectDesc">
 					<a href="/politics/cameron.php" target="cameron"><img src="images/cameron.jpg" /></a>
 					<p>Good old David Cameron. He's so suave yet so caring. he just wants the best for the country. He says so in his lovely new <a href="http://www.flickr.com/photos/conservatives/4244583668/sizes/l/in/photostream/" target="flickr-tory">poster campaign</a> (NSFDuring lunch).</p>
@@ -161,7 +170,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>Malcolm Tucker</h3></div>
+				<div class="projectTitle"><h3>Web: Malcolm Tucker</h3></div>
 				<div class="projectDesc">
 					<a href="/politics/tucker.php" target="tucker"><img src="images/malcolm-tucker.jpg" /></a>
 					<p>Combines the <a href="/politics/cameron.php" target="cameron">David Cameron poster generator</a> with the foul-mouthed tirades of Malcolm Tucker, <a href="http://www.youtube.com/watch?v=LugJd6uGJqI" target="youtube-tucker">sweary spin doctor</a> from The Thick of It.</p>
@@ -169,7 +178,7 @@
 				</div>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>Invented by the English</h3></div>
+				<div class="projectTitle"><h3>Blog: Invented by the English</h3></div>
 				<div class="projectDesc">
 					<a href="http://inventedbytheenglish.wordpress.com" target="english"><img src="images/invented.jpg" /></a>
 					<p>If it was invented, it was probably invented by an Englishman.</p>
