VIVCOM site draft 1.1

--- a/vivcom/index.html
+++ b/vivcom/index.html
@@ -3,23 +3,79 @@
     <head>
         <title>VVCF</title>
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <script>
+            jQuery(document).ready(function( $ ) {
+                $(function(){
+                    $("#menu-icon").click(function(){
+                        $("#menu").slideToggle();
+                    });
+                });
+            });
+        </script>
     </head>
     <body>
-    <nav>
-        <a href="index.html">
-            <img src="images/vvcf-logo.png" alt="Vision for Vulnerable Communities Foundation">
-        </a>
-        <ul id="menu">
-            <li><a href="#">About Us</a></li>
-            <li><a href="">Programs</a></li>
-            <li><a href="">Sponsor a Child</a></li>
-            <li class="donate-button"><a href="">Donate</a></li>
-            <li><a href="">Contact Us</a></li>
-        </ul>
-    </nav>
+    <div id="navigation">
+        <nav>
+            <a href="index.html">
+                <img id="logo" src="images/vvcf-logo.png" alt="Vision for Vulnerable Communities Foundation">
+            </a>
+            <img id="menu-icon" src="images/menu.png">
+            <h1>VIVCOM</h1>
+            <ul id="menu">
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="programs.html">Programs</a></li>
+                <li><a href="sponsor-a-child.html">Sponsor a Child</a></li>
+                <li><a href="donate.html" class="donate-button">Donate</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </div>
     <div id="main-body">
+        <h2>About Us</h2>
+        <p>VIVCOM Foundation- Vision for Vulnerable Communities Foundation (founded in 2012) is a registered Charity Non-governmental Community based organization No.WCBO/1605/15. Our physical office location is in Nabweru, Wakiso District (Uganda).</p>
+        <h3>Vision:</h3>
+        <p>To see an empowered, enlightened and equipped community for sustainable development.</p>
+        <h3>Mission:</h3>
+        <p>We stimulate Vulnerable Communities to enhance viable growth.</p>
+        <h3>Objectives:</h3>
+        <ul>
+            <li>To become a platform aiming at transforming poor communities to live above the poverty line.</li>
+            <li>To implement programs aimed at improving child rights and youth welfare.</li>
+            <li>To implement programs aimed at boosting house hold incomes. </li>
+            <li>To protect the environment.</li>
+            <li>To spear head projects aimed at sensitizing and providing awareness to communities.</li>
+        </ul>
+        <h3>Slogan:</h3>
+        <p>Love with Action, Love in Truth.<p>
+        <h3>Core Values:</h3>
+        <ol>
+            <li>Accountability</li>
+            <li>Integrity</li>
+            <li>Team work</li>
+            <li>Passion</li>
+            <li>Resilience</li>
+        </ol>
+        <h3>Pillars of our Organization:</h3>
+        <ol>
+            <li>Servant Leadership</li>
+            <li>Excellence in Jesus Christ</li>
+        </ol>
+        <h3>Executive Summary:</h3>
+        <p>Household and family vulnerability levels in Uganda expose children to high risks of malnutrition, homelessness and severe impoverishment. Such households cannot provide basic needs to family members and the children, such as education, proper shelter or even feed their children. These families therefore thrive in destitute and insolvent circumstances.</p>
+        <p>The vulnerability levels in Ugandan households occur in threefold, symbolic measures manifest themselves in insurmountable rates and Critically Vulnerable households exhaust traits such as orphaned households, Families with children infected and affected with HIV, Child Headed Households and Children with Disability. Moderately vulnerable households exemplify traits such as elderly headed households, impoverished families as well as families in fishing communities, generally vulnerable households include single headed households where parents separated or divorced, households in bad/poor housing facilities, polygamous households and households in slum communities.</p>
+        <p>Vision for Vulnerable Communities Foundation has resorted to empowering such households by ushering them to a better living as compared to what they had before through helping the absolute poor to make a great impact on the society and thereby decreases the poverty burden in the country.</p>
+        <h3>URLs related to our work:</h3>
+        <ul>
+            <li>Facebook: <a href="https://www.facebook.com/Vision-For-Vulnerable-Communities-Foundation-VIVCOM-Foundation-861875257238221" target="facebook">Vision For Vulnerable Communities Foundation-VIVCOM Foundation</a></li>
+            <li>YouTube: <a href="https://www.youtube.com/watch?v=P3psBwHBS1A&feature=share" target="youtube">Ugandan youth sheltering orphaned children</a></li>
+            <li>Tumblr: <a href="https://www.tumblr.com" target="tumblr">Vision For Vulnerable Communities Foundation</a></li>
+            <li>This is Uganda: <a href="http://thisisuganda.org/1325-2/" target="this-is-uganda">My vision is to end a generation of suffering children in my community.</a></li>
+            <li>Daily Monitor: <a href="http://www.monitor.co.ug/artsculture/Reviews/25-year-old-educating-and-raising-orphans-in-Bwaise/-/691232/2847282/-/lm4e2qz/-/index.html" target="monitor">25-year-old educating and raising orphans in Bwaise</a></li>
+            <li>The Observer: <a href="http://www.observer.ug/lifestyle/42786-ghetto-boys-rise-from-ashes-to-become-head-teachers" target="observer">Ghetto boys rise from ashes to become head teachers</a></li>
+        </ul>
     </div>
     </body>
 </html>
