--- a/vivcom/about-us.html
+++ b/vivcom/about-us.html
@@ -1,7 +1,9 @@
+
 <!DOCTYPE html>
 <html>
     <head>
         <title>VVCF</title>
+        <meta name="viewport" content="initial-scale=1.0, width=device-width" />        
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/reset.css">
