--- a/vivcom/programs.html
+++ b/vivcom/programs.html
@@ -28,13 +28,13 @@
                 <li><a href="about-us.html">About Us</a></li>
                 <li><a href="programs.html">Programs</a></li>
                 <li><a href="sponsor-a-child.html">Sponsor a Child</a></li>
-                <li><a href="donate.html" class="donate-button">Donate</a></li>
+                <li><a href="donate.html" class="button">Donate</a></li>
                 <li><a href="contact-us.html">Contact Us</a></li>
             </ul>
         </nav>
     </div>
     <div id="main-body">
-        <h2>Programs</h2>
+        <h1>Programs</h1>
     </div>
     </body>
 </html>
