--- a/vivcom/sponsor-a-child.html
+++ b/vivcom/sponsor-a-child.html
@@ -28,21 +28,22 @@
                     <li><a href="about-us.html">About Us</a></li>
                     <li><a href="programs.html">Programs</a></li>
                     <li><a href="sponsor-a-child.html">Sponsor a Child</a></li>
-                    <li><a href="donate.html" class="donate-button">Donate</a></li>
+                    <li><a href="donate.html" class="button">Donate</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
         <div id="main-body">
-            <h2>Sponsor a Child</h2>
+            <h1>Sponsor a Child</h1>
             <p>Busy people often regret that time does not permit their desire to help in practical ways. But there is another, personal way to give a child the opportunities that you would wish for yourself and your family. Providing a regular donation will help us pay for food, clothing, medicine, and education for children in deprived areas in Uganda. Can you imagine being an orphaned and vulnerable child in a remote African State like Uganda?</p>
-            <h3>Sponsor a Child:</h3>
+            <h2>Sponsor a Child:</h2>
             <p>Would you like to make a world of difference to a child today? Sponsor a child through VIVCOM Foundation. You will provide hope for a special child of your own interest.</p>
-            <h3>How to Sponsor a child:</h3>
+            <h2>How to Sponsor a child:</h2>
             <p>You become a member of our family of sponsors and we will send you regular school reports, photos and letters from a child whom you sponsor. Sponsorship commitments are made on termly or annually and at the end of your sponsorship year you will be given the opportunity to continue to support your child as he or she continues to progress.</p>
-            <h3>How sponsorship works:</h3>
+            <h2>How sponsorship works:</h2>
             <p>It ensures that a child receives an education, clothing, nutritious food, health care, vocational training, life skills and most importantly a place to call home.</p>
             <p>Primary sponsorship: $300 per term or $900 a year.</p>
+            <p class="button-holder"><a href="sponsor-form.html" class="button">Sponsor a Child</a></p>
         </div>
     </body>
 </html>
