--- a/vivcom/contact-us.html
+++ b/vivcom/contact-us.html
@@ -28,13 +28,13 @@
                     <li><a href="about-us.html">About Us</a></li>
                     <li><a href="programs.html">Programs</a></li>
                     <li><a href="sponsor-a-child.html">Sponsor a Child</a></li>
-                    <li><a href="donate.html" class="donate-button">Donate</a></li>
+                    <li><a href="donate.html" class="button">Donate</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
         <div id="main-body">
-            <h2>Contact Us</h2>
+            <h1>Contact Us</h1>
             <p><strong>Vision For Vulnerable Communities Foundation</strong><br/>
                 P.O BOX 72449, Wakiso (Uganda)</p>
             <p>TEL: +256705152084</p>
