--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 						<li><a href="http://instagram.com/andybarefoot" target="_blank"><img src="images/icons/png64/instagram.png" /></a></li>
 						<li><a href="http://twitter.com/andybarefoot" target="_blank"><img src="images/icons/png64/twitter.png" /></a></li>
 						<li><a href="http://www.facebook.com/profile.php?id=729980577" target="_blank"><img src="images/icons/png64/facebook.png" /></a></li>
+						<li><a href="https://github.com/andybarefoot" target="_blank"><img src="images/icons/png64/github.png" /></a></li>
+						<li><a href="https://codepen.io/andybarefoot/" target="_blank"><img src="images/icons/png64/codepen.png" /></a></li>
 					</ul>
 				</hgroup>
 			</header>
