--- a/football/path01.html
+++ b/football/path01.html
@@ -56,7 +56,7 @@
 219 A.F.C. Bournemouth
 */
 		var w = 1200;
-		var h = 40000;
+		var h = 15000;
 		var lPad = 50;
 		var rPad = 50;
 		var tPad = 50;
@@ -100,8 +100,6 @@
 			[210,"#8E2E44", "#3BC5EC"]
 		];
 
-		var playerDataArray = [];
-
 		function getColour(id,opt){
 			for(i=0;i<clubColours.length;i++){
 				if(clubColours[i][0]==id){
@@ -114,6 +112,13 @@
 		function numberWithCommas(x) {
 			return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
 		}
+
+		sortItems = function (a, b) {
+			console.log(b.totalBirthDistance - a.totalBirthDistance);
+			return b.totalBirthDistance - a.totalBirthDistance;
+		};
+
+   
 
 		// Create scale
 		var xScale = d3
@@ -143,36 +148,6 @@
 
 		$( window ).resize(function() {
 		});
-    	
-    	function populatePlayers(playerID, birthDistance, contractsTotal){
-    		newPlayer = [playerID, birthDistance, contractsTotal];
-    		playerDataArray.push(newPlayer);
-    	}
-
-		function sortByBirth(a, b) {
-		    if (a[1] === b[1]) {
-		        return 0;
-		    } else {
-		    	return (b[1] < a[1]) ? -1 : 1;
-		    }
-		}
-
-		function sortByTransfers(a, b) {
-		    if (a[2] === b[2]) {
-		        return 0;
-		    } else {
-		    	return (b[2] < a[2]) ? -1 : 1;
-		    }
-		}
-
-		function getListPos(playerID){
-			for (var i = 0; i < playerDataArray.length; i++) {
-				if(playerDataArray[i][0]==playerID){
-					return i;
-				}
-			}
-			return 0;
-		}
 
 // function called on load of page to load in data and initiate elements
 		function initiate(dataView){
@@ -206,37 +181,22 @@
 		              return "team-" + d.clubID;
 		            })
 		            .attr("class", "team")
-//					.attr("transform", "translate(0,0)")
-					.attr("transform", function(d,i) {
-		              return "translate(0,"+teamSpacing*i+")";
-		            })
+					.attr("transform", "translate(0,0)")
 	            ;
 	            teams
 					.append("text")
 					.attr("class", "teamName")
-					.attr("x", 0)
-					.attr("y", 0)
-					.attr("dx", 20)
-					.attr("dy", 35)
-					.attr("text-anchor", "start")
-					.text(function(d) { 
-						return d.clubName+": Total distance "+numberWithCommas(d.totalBirthDistance)+" km"; 
-					})
-				;
-
-
 				;
 	            // add a group for each player
 	            players = teams
 		            .selectAll("g")
 		            .data(function(d) {
-						return d.players.sort(function(a, b) { return b.contractsTotal - a.contractsTotal; });
+		              return d.players.sort(function(a, b) { return b.contractsTotal - a.contractsTotal; });
 		            })
 		            .enter()
 		            .append("g")
 		            .attr("id", function(d) {
-		            	populatePlayers(d.playerID, d.birthDistance, d.contractsTotal);
-						return "player-" + d.playerID;
+		              return "player-" + d.playerID;
 		            })
 		            .attr("class", "player")
 					.attr("transform", "translate(0,0)")
@@ -246,18 +206,40 @@
 		        playerRectangles = players
 				    .append("rect")
 				;
+		        // add a group for player names
+	            playerNames = teams
+		            .append("g")
+		            .attr("id", function(d) {
+		              return "playerNames";
+		            })
+				;
 	            // add name for each player
-	            players
+	            playerNames
+		            .selectAll(".playerName")
+		            .data(function(d) { 
+						return d.players;
+		            })
+		            .enter()
 					.append("text")
 					.attr("class", "playerName")
 				;
 	            // add city and distance for each player
-	            players
+	            playerNames
+		            .selectAll(".playerCity")
+		            .data(function(d) { 
+						return d.players;
+		            })
+		            .enter()
 					.append("text")
 					.attr("class", "playerCity")
 				;
 	            // add link for each player
-	            players
+	            playerNames
+	            	.selectAll("path")
+		            .data(function(d) { 
+						return d.players;
+		            })
+		            .enter()
 					.append("path")
 					.attr("class", "link")
 				;
@@ -274,57 +256,48 @@
 				}else if(dataView=="contractsTeam"){
 					showContractsTeam();
 				}
-				getListPos(528, "birth");
 	        });
 		}
 
 		function showBirthTeam(){
 			$("h2").html("Distance travelled from Birthplace to current Club");
-			data = globalData;
+			data = globalData.sort(function(a, b){ return d3.descending(parseFloat(b.clubID), parseFloat(a.clubID)); })
+        	console.log(data);
+
 		    xScale
 		    	.domain([0, d3.max(data, function(d) {
 		    		return d.totalBirthDistance;
 		    	})])
 		    ;
-			svg
-				.select(".xaxis")
-				.transition()
+			var svg = d3.select("body").transition();
+			svg.select(".xaxis")
 				.duration(750)
 				.call(xAxis)
 			;
 			svg
 				.selectAll(".team")
-				.sort(function(a, b){
-					return parseFloat(b.totalBirthDistance) - parseFloat(a.totalBirthDistance);
-				})
-				.transition()
 				.duration(750)
 				.attr("transform", function(d,i) {
-	            	return "translate(0,"+teamSpacing*i+")";
+	              return "translate(0,"+teamSpacing*i+")";
 	            })
-	        ;
+			;
 			svg
 				.selectAll(".team")
 				.selectAll(".player")
-				.sort(function(a, b){
-					return parseFloat(b.birthDistance) - parseFloat(a.birthDistance);
-				})
-				.transition()
 				.duration(750)
-				.attr("transform", "translate(0,0)")
+				.attr("transform", function(d,i) {
+					if(i==0)barStart=0;
+					thisX = barStart;
+					barStart+=xScale(d.birthDistance);
+					return "translate("+thisX+","+barTop+")";
+	            })
 			;
 			svg
 				.selectAll(".team")
 				.selectAll(".player rect")
-				.transition()
 				.duration(750)
-				.attr("x", function(d,i) {
-					if(i==0)barStart=0;
-					thisX = barStart;
-					barStart+=xScale(d.birthDistance);
-					return thisX;
-	            })
-				.attr("y",barTop)
+				.attr("x",0)
+				.attr("y",0)
         		.attr("width",  function(d) {
 					return xScale(d.birthDistance);
 	            })
@@ -337,7 +310,6 @@
 			svg
 				.selectAll(".team")
 				.selectAll(".playerName")
-				.transition()
 				.duration(750)
 				.attr("x", function(d,i) {
 					return nameLeft + (i-(i%2))*nameSpacing; 
@@ -357,7 +329,6 @@
 			svg
 				.selectAll(".team")
 				.selectAll(".playerCity")
-				.transition()
 				.duration(750)
 				.attr("x", function(d,i) {
 					return nameLeft + (i-(i%2))*nameSpacing; 
@@ -391,67 +362,55 @@
 					+ " " + x2 + "," + y2;
 				})
 			;
+/*
+   // join
+    // this joins the new data to the existing data
+    var teams = svg.selectAll('.team')
+        .data(data);
 
-		}
-
-		function showTransfersTeam(){
-			$("h2").html("Total distance of all transfers up to current Club");
-			data = globalData;
-		    xScale
-		    	.domain([0, d3.max(data, function(d) {
-		    		return d.totalClubContractDistance;
-		    	})])
-		    ;
-			svg.select(".xaxis")
-				.transition()
-				.duration(750)
-				.call(xAxis)
-			;
+    // update
+    // this will update existing teams that have a different location
+    teams.attr('transform', function (d, i) {
+        return 'translate(0, ' + teamSpacing * i + ')';
+    });
+*/
+/*
 			svg
-				.selectAll(".team")
-				.sort(function(a, b){
-					return parseFloat(b.totalClubContractDistance) - parseFloat(a.totalClubContractDistance);
-				})
-				.transition()
+				.selectAll("g .team")
 				.duration(750)
 				.attr("transform", function(d,i) {
-	             	return "translate(0,"+teamSpacing*i+")";
+	              return "translate(0,"+teamSpacing*i+")";
 	            })
 			;
 			svg
 				.selectAll(".team")
 				.selectAll(".player")
-				.sort(function(a, b){
-					return parseFloat(b.contractsTotal) - parseFloat(a.contractsTotal);
-				})
-				.transition()
 				.duration(750)
-				.attr("transform", "translate(0,0)")
+				.attr("transform", function(d,i) {
+					if(i==0)barStart=0;
+					thisX = barStart;
+					barStart+=xScale(d.birthDistance);
+					return "translate("+thisX+","+barTop+")";
+	            })
 			;
 			svg
 				.selectAll(".team")
 				.selectAll(".player rect")
-				.transition()
 				.duration(750)
-				.attr("x", function(d,i) {
-					if(i==0)barStart=0;
-					thisX = barStart;
-					barStart+=xScale(d.contractsTotal);
-					return thisX;
-	            })
-				.attr("y",barTop)
+				.attr("x",0)
+				.attr("y",0)
         		.attr("width",  function(d) {
-					return xScale(d.contractsTotal);
+					return xScale(d.birthDistance);
 	            })
 		        .attr("height", barWidth)
 				.style("fill", function(d,i) {
 					return getColour(d.clubID, 1 + (i%2)); 
 				})
 			;
+
 			svg
 				.selectAll(".team")
 				.selectAll(".playerName")
-				.transition()
 				.duration(750)
 				.attr("x", function(d,i) {
 					return nameLeft + (i-(i%2))*nameSpacing; 
@@ -471,7 +430,125 @@
 			svg
 				.selectAll(".team")
 				.selectAll(".playerCity")
-				.transition()
+				.duration(750)
+				.attr("x", function(d,i) {
+					return nameLeft + (i-(i%2))*nameSpacing; 
+				})
+				.attr("y", function(d,i) {
+					return (barTop + barWidth*(i%2) + (linkHeight+5) * (2*(i%2)-1)) + nameOffset * (Math.floor(i/2)%2) * (2*(i%2)-1) + lineSpacing;
+				})
+				.attr("dx", 0)
+				.attr("dy", function(d,i) {
+					return fontSize * (i%2) + lineSpacing * ((i%2)-1); 
+				})
+				.attr("text-anchor", "middle")
+				.text(function(d) { 
+					return numberWithCommas(d.birthDistance) + " km (" + d.birthCity + ")"; 
+				})
+			;
+			svg
+				.selectAll(".team")
+				.selectAll(".link")
+				.attr("d", function(d,i) {
+					if(i==0)barStart=0;
+
+					x1 = barStart + xScale(d.birthDistance)/2;
+					x2 = nameLeft + (i-(i%2))*nameSpacing;
+					y1 = barTop + barWidth*(i%2);
+					y2 = y1 + 2*linkHeight*(i%2) - linkHeight;
+					barStart+=xScale(d.birthDistance);
+					return "M" + x1 + "," + y1
+					+ "C" + x1 + "," + (y1 + y2) / 2
+					+ " " + x2 + "," + (y1 + y2) / 2
+					+ " " + x2 + "," + y2;
+				})
+			;
+*/
+			svg
+				.selectAll(".teamName")
+				.attr("x", 0)
+				.attr("y", 0)
+				.attr("dx", 20)
+				.attr("dy", 35)
+				.attr("text-anchor", "start")
+				.text(function(d) { 
+					return d.clubName+": Total distance "+numberWithCommas(d.totalBirthDistance)+" km"; 
+				})
+			;
+		}
+
+		function showTransfersTeam(){
+			$("h2").html("Total distance of all transfers up to current Club");
+			data = globalData;
+//		    data.sort(function(a, b) {
+//		    	return d3.ascending(b.totalClubContractDistance, a.totalClubContractDistance);
+//		    });
+		    xScale
+		    	.domain([0, d3.max(data, function(d) {
+		    		return d.totalClubContractDistance;
+		    	})])
+		    ;
+			var svg = d3.select("body").transition();
+			svg.select(".xaxis")
+				.duration(750)
+				.call(xAxis)
+			;
+			svg
+				.selectAll(".team")
+				.sort(sortItems)
+				.duration(750)
+				.attr("transform", function(d,i) {
+	             	return "translate(0,"+teamSpacing*i+")";
+	            })
+			;
+			svg
+				.selectAll(".team")
+				.selectAll(".player")
+				.duration(750)
+				.attr("transform", function(d,i) {
+					if(i==0)barStart=0;
+					thisX = barStart;
+					barStart+=xScale(d.contractsTotal);
+					return "translate("+thisX+","+barTop+")";
+	            })
+			;
+			svg
+				.selectAll(".team")
+				.selectAll(".player rect")
+				.duration(750)
+				.attr("x",0)
+				.attr("y",0)
+        		.attr("width",  function(d) {
+					return xScale(d.contractsTotal);
+	            })
+		        .attr("height", barWidth)
+				.style("fill", function(d,i) {
+					return getColour(d.clubID, 1 + (i%2)); 
+				})
+			;
+
+			svg
+				.selectAll(".team")
+				.selectAll(".playerName")
+				.duration(750)
+				.attr("x", function(d,i) {
+					return nameLeft + (i-(i%2))*nameSpacing; 
+				})
+				.attr("y", function(d,i) {
+					return (barTop + barWidth*(i%2) + (linkHeight+5) * (2*(i%2)-1)) + nameOffset * (Math.floor(i/2)%2) * (2*(i%2)-1);
+				})
+				.attr("dx", 0)
+				.attr("dy", function(d,i) {
+					return fontSize * (i%2) + lineSpacing * ((i%2)-1); 
+				})
+				.attr("text-anchor", "middle")
+				.text(function(d) { 
+					return d.playerName; 
+				})
+			;
+			svg
+				.selectAll(".team")
+				.selectAll(".playerCity")
 				.duration(750)
 				.attr("x", function(d,i) {
 					return nameLeft + (i-(i%2))*nameSpacing; 
@@ -524,7 +601,6 @@
 		}
 
 		function showTransfersIndiv(){
-	    	playerDataArray.sort(sortByTransfers);
 			$("h2").html("Total distance of all transfers up to current Club");
 			data = globalData;
 		    xScale
@@ -534,45 +610,42 @@
 					});
 				})])
 		    ;
+			var svg = d3.select("body").transition();
 			svg.select(".xaxis")
-				.transition()
 				.duration(750)
 				.call(xAxis)
 			;
 			svg
-				.selectAll(".team")
-				.transition()
-				.duration(750)
-				.attr("transform", "translate(0,0)")
-			;
-			svg
-				.selectAll(".team")
-				.selectAll(".player")
-				.transition()
-				.duration(750)
-				.attr("transform", function(d,i) {
-	             	return "translate(0," + (15+(getListPos(d.playerID)*45)) +")";
-	            })
-			;
-			svg
 				.selectAll("rect")
-				.transition()
 				.duration(750)
 				.attr("x",0)
-				.attr("y",0)
+				.attr("y",function(d,i) { 
+					return 15 + d.birthOrder*45;
+	            })
 				.attr("height",20)
         		.attr("width", function(d) { return xScale(d.contractsTotal); })
 				.style("fill", function(d) {
 					return getColour(d.clubID, 1); 
 				})
 			;
+			svg
+				.selectAll("g .team")
+				.duration(750)
+				.attr("transform", "translate(0,0)")
+			;
+			svg
+				.selectAll("g .player")
+				.duration(750)
+				.attr("transform", "translate(0,0)")
+			;
 
 			svg
 				.selectAll(".playerName")
-				.transition()
 				.duration(750)
         		.attr("x", function(d) { return xScale(d.contractsTotal); })
-				.attr("y",0)
+				.attr("y",function(d,i) { 
+					return 15 + d.birthOrder*45;
+	            })
 				.attr("dx", function(d,i) { 
 					if(xScale(d.contractsTotal)>(w-(lPad+rPad+400))){
 						return -5;
@@ -593,21 +666,12 @@
 				})
 			;
 			svg
-				.selectAll(".teamName")
-				.text("")
-			;
-			svg
-				.selectAll(".link")
-				.attr("d", "M0,0L0,0")
-			;
-			;
-			svg
 				.selectAll(".playerCity")
-				.transition()
 				.duration(750)
         		.attr("x", 0)
-				.attr("y", 18)
-				.attr("dx", 0)
+				.attr("y",function(d,i) { 
+					return 32 + d.birthOrder*45;
+	            })
 				.attr("dy", 15)
 				.attr("text-anchor", "start")
 				.text(function(d) { 
@@ -622,11 +686,19 @@
 					return str; 
 				})
 			;
+			svg
+				.selectAll(".teamName")
+				.text("")
+			;
+			svg
+				.selectAll(".link")
+				.attr("d", "M0,0L0,0")
+			;
 		}
 
 		function showBirthIndiv(){
-	    	playerDataArray.sort(sortByBirth);
 			$("h2").html("Distance travelled from Birthplace to current Club");
+			data = globalData;
 		    xScale
 		    	.domain([0, d3.max(data, function(d) {
 					return d3.max(d.players, function(e) { 
@@ -634,34 +706,18 @@
 					});
 				})])
 		    ;
+			var svg = d3.select("body").transition();
 			svg.select(".xaxis")
-				.transition()
 				.duration(750)
 				.call(xAxis)
 			;
-
-			svg
-				.selectAll(".team")
-				.transition()
-				.duration(750)
-				.attr("transform", "translate(0,0)")
-			;
-			svg
-				.selectAll(".team")
-				.selectAll(".player")
-				.transition()
-				.duration(750)
-				.attr("transform", function(d,i) {
-	             	return "translate(0," + (15+(getListPos(d.playerID)*25)) +")";
-	            })
-			;
-
 			svg
 				.selectAll("rect")
-				.transition()
 				.duration(750)
 				.attr("x",0)
-				.attr("y",0)
+				.attr("y",function(d,i) { 
+					return 15 + d.birthOrder*25;
+	            })
 				.attr("height",20)
         		.attr("width", function(d) { return xScale(d.birthDistance); })
 				.style("fill", function(d) {
@@ -669,11 +725,22 @@
 				})
 			;
 			svg
+				.selectAll("g .team")
+				.duration(750)
+				.attr("transform", "translate(0,0)")
+			;
+			svg
+				.selectAll("g .player")
+				.duration(750)
+				.attr("transform", "translate(0,0)")
+			;
+			svg
 				.selectAll(".playerName")
-				.transition()
 				.duration(750)
         		.attr("x", function(d) { return xScale(d.birthDistance); })
-				.attr("y",0)
+				.attr("y",function(d,i) { 
+					return 15 + d.birthOrder*25;
+	            })
 				.attr("dx", function(d,i) { 
 					if(xScale(d.birthDistance)>(w-(lPad+rPad+400))){
 						return -5;
@@ -706,6 +773,7 @@
 				.attr("d", "M0,0L0,0")
 			;
 		}
+
 
     </script>
 
