homepage content update

--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
 				<h2>Personal Projects</h2>
 			</div>
 			<div class="project">
+				<div class="projectTitle"><h3>Data Vis: Premier League</h3></div>
+				<div class="projectDesc">
+					<a href="/football/path.html" target="premier"><img src="images/premier.png" /></a>
+					<p>A <a href="/football/path.html" target="premier">data visualisation</a> to show the distance travelled by each Premier League footballer to get to their current club. It shows the distance from the player's birthplace and the clubs they have been at along the way both individually and totalled for each club. </p>
+					<p>See which clubs cast their nets the furthest and which rely on the largest number of journeymen.</p>
+					<p>The visualisation was built using D3.js and JQuery and all the data was scraped from Wikipedia.</p>
+				</div>
+				<div class="projectTitle"><h3>Javascript: Codepen</h3></div>
+				<div class="projectDesc">
+					<a href="https://codepen.io/andybarefoot/" target="codepen"><img src="images/codepen.png" /></a>
+					<p>As I was spending more and more time playing with JavaScript it made sense to work directly in <a href="https://codepen.io/andybarefoot/" target="codepen">Codepen</a> for some of the smaller experiements. At the moment it holds a few experiements with SVGs (dynamic scaling, animation and background images).</p>
+					<p>The amount of content here will continue to grow.</p>
+				</div>
 				<div class="projectTitle"><h3>Data Vis: UFWC</h3></div>
 				<div class="projectDesc">
 					<a href="/football/" target="football"><img src="images/football.png" /></a>
