--- a/football/path.html
+++ b/football/path.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8"/>
     <title>Premier League Players</title>
+    <meta property="og:url" content="http://www.andybarefoot.com/football/path.html" />
+    <meta property="og:title" content="The Path to the Premier League" />
+    <meta property="og:description" content="Data visualisations of the path taken to the Preier League by each of the players from the 2016-2017 season." />
+    <meta property="og:image" content="http://www.andybarefoot.com/football/images/fb-football-prem.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="/jscript/d3.v3.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Yanone+Kaffeesatz:400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+    <script src="/jscript/analyticstracking.js"></script>
     <link rel="stylesheet" href="path.css">
+    <link rel="stylesheet" href="/css/footer.css">
   </head>
 
   <body>
@@ -1229,7 +1235,22 @@
 		}
 
     </script>
-
+<!-- FOOTER: Requires footer.css & Open Sans font to be included -->
+      <div id="barefoot-footer">
+        <div id="barefoot-home-links">
+          <a href="/">Andy Barefoot</a> > World Football Champions
+        </div>
+        <div id="barefoot-social-links">
+          <ul>
+            <li><a href="https://www.linkedin.com/in/andybarefoot/" target="_blank"><img src="/images/icons/png32/linkedin.png"></a></li>
+            <li><a href="mailto:andy@andybarefoot.com"><img src="/images/icons/png32/email.png"></a></li>
+            <li><a href="http://instagram.com/andybarefoot" target="_blank"><img src="/images/icons/png32/instagram.png"></a></li>
+            <li><a href="http://twitter.com/andybarefoot" target="_blank"><img src="/images/icons/png32/twitter.png"></a></li>
+            <li><a href="http://www.facebook.com/profile.php?id=729980577" target="_blank"><img src="/images/icons/png32/facebook.png"></a></li>
+          </ul>
+        </div>
+      </div>
+<!-- END FOOTER -->
 
   </body>
 </html>
