homepage content update

--- a/index.html
+++ b/index.html
@@ -64,12 +64,16 @@
 					<p>See which clubs cast their nets the furthest and which rely on the largest number of journeymen.</p>
 					<p>The visualisation was built using D3.js and JQuery and all the data was scraped from Wikipedia.</p>
 				</div>
+			</div>
+			<div class="project">
 				<div class="projectTitle"><h3>Javascript: Codepen</h3></div>
 				<div class="projectDesc">
 					<a href="https://codepen.io/andybarefoot/" target="codepen"><img src="images/codepen.png" /></a>
 					<p>As I was spending more and more time playing with JavaScript it made sense to work directly in <a href="https://codepen.io/andybarefoot/" target="codepen">Codepen</a> for some of the smaller experiements. At the moment it holds a few experiements with SVGs (dynamic scaling, animation and background images).</p>
 					<p>The amount of content here will continue to grow.</p>
 				</div>
+			</div>
+			<div class="project">
 				<div class="projectTitle"><h3>Data Vis: UFWC</h3></div>
 				<div class="projectDesc">
 					<a href="/football/" target="football"><img src="images/football.png" /></a>
