faceboom social feed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/main-r.css">
 		<meta charset="utf-8" />
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
 		<script src="/jscript/analyticstracking.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 		<script src="jscript/imagesloaded.pkgd.min.js"></script>
@@ -263,16 +263,42 @@
 				<h2>Social Feed</h2>
 			</div><!-- socialTitle -->
 			<div masonry  preserve-order id="container">
+				<!-- SOCIAL CONTENT -->
 				<div class="item masonry-brick" ng-repeat="instagram in instagrams">
-					<div class="dateText">
-						<a ng-href="{{userURLString(instagram.owner.id)}}" target="_blank"><img src="images/icons/png32/instagram.png" width="24" height="24" /></a>
-						{{ userNameString(instagram.owner.id) }}{{ instagram.date * 1000 | date:'d MMMM yyyy' }}
-					</div><!-- class: dateText -->
-					<img ng-click="instagram.is_clicked = true" class="video-play" ng-if="instagram.is_video && !instagram.is_clicked" src="images/video-icon.png" />
-					<img ng-src="{{ getImage(instagram.local_image) }}" alt="{{ instagram.caption }}" ng-show="!instagram.is_clicked" />
-					<video ng-if="instagram.is_video && instagram.is_clicked" controls="controls" autoplay poster="{{ getImage(instagram.local_image) }}" name="Video Name" ng-src="{{ getVideo(instagram.local_video) }}"></video>
-<!--					<video ng-show="instagram.is_video" controls><source ng-src="videos/instagram/inst-BF_8_n7G7v_.mp4" type="video/mp4"></video>-->
-					<p>{{ instagram.caption }}</p>
+					<div class="facebook-post" ng-if="instagram.facebook">
+						<div class="dateText">
+							<a ng-if="instagram.facebook" ng-href="{{facebookPostLink(instagram.id)}}" target="_blank"><img src="images/icons/png32/facebook.png" width="24" height="24" /></a>
+							<a ng-if="!instagram.facebook" ng-href="{{userURLString(instagram.owner.id)}}" target="_blank"><img src="images/icons/png32/instagram.png" width="24" height="24" /></a>
+							Facebook | {{ instagram.date * 1000 | date:'d MMMM yyyy' }}
+						</div><!-- class: dateText -->
+<!-- 'type' options - status : photo : link : video -->
+						<p ng-bind-html="renderHtml(instagram.message)"></p>
+						<div ng-if="instagram.type!='status'" class="facebook-link">
+							<a ng-if="instagram.link" ng-href="{{instagram.link}}" target="_blank">
+
+								<img class="facebook-image" ng-if="instagram.full_picture && instagram.type == 'photo'" ng-src="{{ instagram.full_picture }}" />
+
+								<img class="facebook-image" ng-if="instagram.picture && instagram.type != 'photo'" ng-src="{{ instagram.picture }}" />
+
+							</a>
+							<a ng-if="instagram.link" ng-href="{{instagram.link}}" target="_blank"><h4 ng-if="instagram.name">{{ instagram.name }}</h4></a>
+							<p class="facebook-caption" ng-if="instagram.caption">{{ instagram.caption }}</p>
+							<p class="facebook-description" ng-if="instagram.description">{{ instagram.description }}</p>
+						</div>
+						<p>
+						</p>
+					</div>
+					<div class="instagram-post" ng-if="!instagram.facebook">
+						<div class="dateText">
+							<a ng-if="instagram.facebook" ng-href="{{facebookPostLink(instagram.id)}}" target="_blank"><img src="images/icons/png32/facebook.png" width="24" height="24" /></a>
+							<a ng-if="!instagram.facebook" ng-href="{{userURLString(instagram.owner.id)}}" target="_blank"><img src="images/icons/png32/instagram.png" width="24" height="24" /></a>
+							{{ userNameString(instagram.owner.id) }}{{ instagram.date * 1000 | date:'d MMMM yyyy' }}
+						</div><!-- class: dateText -->
+						<img ng-click="instagram.is_clicked = true" class="video-play" ng-if="instagram.is_video && !instagram.is_clicked" src="images/video-icon.png" />
+						<img ng-src="{{ getImage(instagram.local_image) }}" alt="{{ instagram.caption }}" ng-show="!instagram.is_clicked" />
+						<video ng-if="instagram.is_video && instagram.is_clicked" controls="controls" autoplay poster="{{ getImage(instagram.local_image) }}" name="Video Name" ng-src="{{ getVideo(instagram.local_video) }}"></video>
+						<p>{{ instagram.caption }}</p>
+					</div>
 				</div><!-- class: item -->
 			</div><!-- container -->
 			<div id="more" class="dateText" ng-show="showMoreSocial" ng-click="loadMoreSocial()">LOAD MORE SOCIAL FEED</div>
